app/projects/static/projects/main.css
.readme {
    text-align: left;
}

.readme pre {
    border-radius: .5em;
    background: #f0f0f0;
    padding: .7em;
}

.readme h1, .readme h2,
.readme h3, .readme h4,
.readme h5, .readme h6 {
    font-weight: 600;
    line-height: 1.25;
    margin-top: 24px;
    margin-bottom: 16px;
}

.readme h1, h2 {
    padding-bottom: .2em;
    border-bottom: 1px solid #d0d7de;
}

.readme table {
    display: block;
    border-spacing: 0;
    border-collapse: collapse;
    max-width: fit-content;
    overflow-x: auto;
    white-space: nowrap;
}

.readme table td,
.readme table th,
.readme table tr {
    border: 1px solid darkgrey;
    padding: .2em;
}

.readme table tbody {
    text-align: left;
}

.readme table thead {
    text-align: center;
}

.readme table tr:first-child th {
    border-top: 0;
}
.readme table tr:last-child td {
    border-bottom: 0;
}
.readme table tr td:first-child,
.readme table tr th:first-child {
    border-left: 0;
}
.readme table tr td:last-child,
.readme table tr th:last-child {
    border-right: 0;
}

.readme .even {
    background: #f3f3f3;
}

.card .card-body .card-text {
    overflow: hidden;
    text-overflow: ellipsis;
    max-height: 3em
}

.card-img-top {
    width: 100%;
    height: 16rem;
    object-fit: scale-down;
}

.card {
    padding-top: 1rem;
}

